LPS-60571 Fixes the size of the fields on Data Provider Form Modal on mobile devices.

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-data-provider-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-data-provider-web/src/main/resources/META-INF/resources/css/main.scss
@@ -1,3 +1,5 @@
+@import "mixins";
+
 .portlet-dynamic-data-mapping-data-provider {
 	.btn-action {
 		height: 64px;
@@ -7,6 +9,17 @@
 
 	.required-warning {
 		margin-bottom: 20px;
+	}
+
+	.form-control {
+		font-size: 14px;
+    	height: 40px;
+	}
+
+	@include sm {
+		.form-control {
+			font-size: 16px;
+		}
 	}
 }
 
